# OpenAgent

./: .gitignore  AGENTS.md  ANTIGRAVITY.md  CLAUDE.md  CURSOR.md  Dockerfile.ui  Makefile  README.md  TODO.md  docker-compose.yml  pyproject.toml  requirements.txt  roadmap.md  run.sh  services.json  services.sh  stop.sh
.claude/: agno.md  settings.json  settings.local.json
app/: __init__.py  diary_store.py  main.py  pyproject.toml  requirements.txt
app/openagent/: config.py  llm.py
app/openagent/cron/: __init__.py  service.py
app/openagent/observability/: logging.py
app/openagent/providers/: __init__.py
app/openagent/session/: backend.py
app/routes/: __init__.py  browser.py  chat.py  config.py  dashboard.py  extensions.py  logs.py  mcp_tester.py  provider.py  research.py  services.py  settings.py
app/static/: .gitkeep  app.css
app/templates/: _stats_cards.html  base.html  browser.html  chat.html  config.html  dashboard.html  extensions.html  logs.html  research.html  services.html  settings.html
app/tests/: test_extensions_route.py  test_main.py  test_memory.py
app/tests/routes/: test_extensions.py  test_logs.py  test_settings.py
config/: openagent.toml  openagent.yaml.example
extensions/discord/: pyproject.toml
extensions/discord/src/: discord_bridge.py  discord_connector.py  discord_plugin.py  discord_schema.py
extensions/discord/tests/: test_bridge.py  test_connector.py  test_plugin.py
extensions/stt/: pyproject.toml
extensions/stt/src/: plugin.py
extensions/stt/src/stt/: __init__.py  plugin.py
extensions/stt/src/stt/providers/: __init__.py  base.py  deepgram.py  whisper.py
extensions/stt/tests/: conftest.py  test_deepgram_provider.py  test_e2e_voice.py  test_plugin.py  test_real_audio.py  test_whisper_provider.py
extensions/tts/: pyproject.toml
extensions/tts/src/: __init__.py  plugin.py
extensions/tts/src/providers/: __init__.py  edge.py  minimax.py
extensions/tts/src/tts/: plugin.py
extensions/tts/src/tts/providers/: base.py  edge.py  minimax.py
extensions/tts/tests/: conftest.py  test_e2e_tts.py  test_edge_provider.py  test_minimax_provider.py  test_plugin.py
extensions/whatsapp/: pyproject.toml
extensions/whatsapp/src/: plugin.py  session.py  transports.py
extensions/whatsapp/tests/: test_plugin_backends.py  test_transports.py
openagent/: Cargo.toml  __init__.py  browser_sessions.py  config.py  main.py  manager.py  settings_store.py
openagent-py/openagent/agent/: platform_tools.py
openagent-py/openagent/bus/: events.py
openagent-py/openagent/cron/: types.py
openagent-py/openagent/services/: __init__.py
openagent-py/openagent/session/: sqlite.py
openagent-py/openagent/tests/: test_cortex_provider.py  test_main.py  test_memory.py  test_service_manager.py  test_session.py
openagent/agent/: identity_tools.py  loop.py  skill_tools.py  tools.py
openagent/agent/middlewares/: __init__.py  stt.py  tts.py
openagent/bus/: bus.py  events.py
openagent/channels/: adapter.py  manager.py  web.py  whatsapp.py
openagent/cron/: service.py
openagent/observability/: __init__.py  logging.py  metrics.py  otel.py
openagent/providers/: __init__.py  agno.py  base.py  cortex.py  openai_compat.py
openagent/services/: __init__.py  manager.py  protocol.py
openagent/session/: backend.py  manager.py  sqlite.py
openagent/src/: config.rs  console.rs  dispatch.rs  guard.rs  main.rs  manager.rs  manifest.rs  mcplite.rs  metrics.rs  middleware.rs  otel.rs  platform.rs  routes.rs  scrub.rs  server.rs  session.rs  state.rs  stt.rs  telemetry.rs  tts.rs
openagent/src/agent/: classifier.rs  config.rs  core.rs  diary.rs  handlers.rs  llm.rs  memory_adapter.rs  metrics.rs  mod.rs  prompt.rs  tool_router.rs
openagent/src/channels/: adapter.rs  address.rs  config.rs  discord.rs  irc.rs  mattermost.rs  mod.rs  registry.rs  slack.rs  telegram.rs
openagent/src/config/: channel_types.rs  (+1 more)
openagent/tests/: test_agent_loop.py  test_bus.py  test_config.py  test_cortex_provider.py  test_cron.py  test_memory_tools.py  test_middlewares.py  test_protocol.py  test_providers_agno.py  test_service_manager.py  test_session.py
scripts/: install-systemd.sh
services/browser/: Cargo.toml  service.json
services/browser/src/: app_config.rs  main.rs  metrics.rs  params.rs  runner.rs  search.rs  session.rs  tools.rs
services/browser/src/handlers/: config.rs  interaction.rs  mod.rs  page.rs  query.rs  storage.rs  tabs.rs
services/channels/: Cargo.toml  README.md  check_errors.txt
services/channels/src/: address.rs  main.rs
services/cortex/: Cargo.toml  README.md  TODO.md  service.json
services/discord/: Cargo.toml  README.md  go.mod  go.sum  main.go  service.json
services/discord/src/: dispatch.rs  handler.rs  main.rs  metrics.rs  state.rs  tools.rs
services/filesystem/: service.json
services/guard/: Cargo.toml  service.json
services/guard/src/: db.rs  handlers.rs  main.rs  metrics.rs  tools.rs
services/hello/: service.json
services/memory/: Cargo.toml  README.md  service.json
services/memory/src/: db.rs  handlers.rs  main.rs  metrics.rs  tools.rs
services/research/: Cargo.toml  service.json
services/research/src/: db.rs  handlers.rs  main.rs  metrics.rs  snapshot.rs  tools.rs
services/sandbox/: Cargo.toml  README.md  service.json
services/sandbox/src/: handlers.rs  main.rs  metrics.rs  msb.rs  tools.rs
services/sdk-go/: go.mod
services/sdk-rust/: Cargo.toml
services/sdk-rust/src/: codec.rs  lib.rs  otel.rs  server.rs  telemetry.rs  types.rs
services/shell/: main.go  main_test.go
services/slack/: Cargo.toml  go.mod  main.go  service.json
services/stt/: Cargo.toml  service.json
services/telegram/: Cargo.toml  go.mod  go.sum  main.go  service.json
services/tts/: Cargo.toml  service.json
services/validator/: Cargo.toml  service.json
services/whatsapp/: go.mod  go.sum  main.go  runtime.go  service.json
skills/agent-browser/: SKILL.md
skills/browser/: SKILL.md
skills/rust-guidelines/: SKILL.md
skills/youtube-transcript/: SKILL.md
src/openagent/: manager.py
tests/: conftest.py
(+77 files in other folders)
