[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openagent-core"
version = "0.1.0"
description = "OpenAgent core orchestrator and extension manager."
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
openagent = "openagent.main:run"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
