[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openagent-app"
version = "0.1.0"
description = "OpenAgent minimalist web UI."
requires-python = ">=3.11"
dependencies = [
    "openagent-core",
    "fastapi[standard]>=0.100.0",
    "jinja2>=3.1.0",
    "pyyaml>=6.0",
    "psutil>=5.9.0",
]

[tool.setuptools.packages.find]
where = [".."]
include = ["app*"]
