[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openagent-discord"
version = "0.1.0"
description = "Discord extension for OpenAgent."
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.9.0",
    "discord.py>=2.4.0",
    "openagent-core",
]

[project.entry-points."openagent.extensions"]
discord = "discord_plugin:DiscordExtension"

[project.optional-dependencies]
test = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[tool.setuptools]
package-dir = {"" = "src"}
py-modules = [
    "discord_plugin",
    "discord_connector",
    "discord_bridge",
    "discord_schema",
]
