[package]
name = "browser"
version = "0.1.0"
edition = "2021"

[dependencies]
sdk-rust = { path = "../sdk-rust" }
tokio = { version = "1.42", features = ["rt-multi-thread", "macros", "fs", "io-util", "process"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1", features = ["v4"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"
