[package]
name = "channels"
version = "0.2.0"
edition = "2021"

[dependencies]
sdk-rust = { path = "../sdk-rust" }
anyhow = "1.0"
async-trait = "0.1"
tokio = { version = "1.36", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
url = "2.5"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "multipart", "stream"] }
parking_lot = "0.12"
futures-util = "0.3"
tokio-tungstenite = "0.21"
uuid = { version = "1.8", features = ["v4"] }
base64 = "0.22"
chrono = "0.4"
