[package]
name = "guard"
version = "0.1.0"
edition = "2021"
description = "Guard MCP-lite service — user whitelist and message security (Phase 1: whitelist; Phase 2+: credential scrubbing, prompt injection detection)"

[[bin]]
name = "guard"
path = "src/main.rs"

[dependencies]
sdk-rust = { path = "../sdk-rust" }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
tracing = "0.1"
opentelemetry = { version = "0.27", features = ["trace"] }
rusqlite = { version = "0.32", features = ["bundled"] }
mimalloc = { version = "0.1", default-features = false }

[lints.rust]
ambiguous_negative_literals = "warn"
missing_debug_implementations = "warn"
redundant_imports = "warn"
redundant_lifetimes = "warn"
trivial_numeric_casts = "warn"
unsafe_op_in_unsafe_fn = "warn"
unused_lifetimes = "warn"

[lints.clippy]
cargo = { level = "warn", priority = -1 }
complexity = { level = "warn", priority = -1 }
correctness = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
perf = { level = "warn", priority = -1 }
style = { level = "warn", priority = -1 }
suspicious = { level = "warn", priority = -1 }
literal_string_with_formatting_args = "allow"
