[package]
name = "memory"
version = "0.1.0"
edition = "2021"
description = "Agentic Memory MCP-lite service — LanceDB + FastEmbed, LTS/STS vector stores"

[dependencies]
# MCP-lite (sdk-rust)
sdk-rust = { path = "../sdk-rust" }

# Vector engine
lancedb = "0.26"

# Embeddings — local ONNX
fastembed = { version = "5", default-features = false, features = ["hf-hub-rustls-tls"] }
# ort (ONNX Runtime) — must explicitly opt in to binary download
ort = { version = "2.0.0-rc.11", features = ["download-binaries"] }

# Arrow for LanceDB schema — must match lancedb's internal arrow version (57)
arrow-array = "57"
arrow-schema = "57"

# Runtime
tokio = { version = "1.42", features = ["rt-multi-thread", "macros", "fs", "io-util"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
anyhow = "1.0"

# Utilities
uuid = { version = "1", features = ["v4"] }

# Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Async streams (for try_collect on LanceDB result streams)
futures = "0.3"
