[package]
name = "research"
version = "0.1.0"
edition = "2021"
description = "Research DAG service — persistent cross-session research tracking with task graph and markdown snapshots"

[dependencies]
sdk-rust = { path = "../sdk-rust" }
tokio = { version = "1.42", features = ["rt-multi-thread", "macros", "fs", "io-util", "net", "time"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
rusqlite = { version = "0.31", features = ["bundled"] }
uuid = { version = "1", features = ["v4"] }
tracing = "0.1"
opentelemetry = { version = "0.27", features = ["trace"] }
tracing-opentelemetry = "0.28"

[lints.rust]
missing_debug_implementations = "warn"
unsafe_op_in_unsafe_fn = "warn"

[lints.clippy]
cargo       = { level = "warn", priority = -1 }
complexity  = { level = "warn", priority = -1 }
correctness = { level = "warn", priority = -1 }
pedantic    = { level = "warn", priority = -1 }
perf        = { level = "warn", priority = -1 }
style       = { level = "warn", priority = -1 }
suspicious  = { level = "warn", priority = -1 }
get_unwrap                      = "warn"
unwrap_used                     = "warn"
panic                           = "warn"
dbg_macro                       = "warn"
