[package]
name = "sandbox"
version = "0.1.0"
edition = "2021"

[dependencies]
sdk-rust = { path = "../sdk-rust" }
minreq = { version = "2", features = ["json-using-serde"] }
tokio = { version = "1.42", features = ["rt-multi-thread", "macros", "fs", "io-util"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"
