[package]
name = "sdk-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.42", features = ["net", "io-util", "rt-multi-thread", "macros", "sync"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
anyhow = "1.0"
# OpenTelemetry — OTLP/JSON file tracing
opentelemetry = { version = "0.27", features = ["trace"] }
opentelemetry_sdk = { version = "0.27", features = ["trace", "rt-tokio"] }
futures-util = "0.3"
tracing-opentelemetry = "0.28"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
hex = "0.4"
